--- a/tests/Acceptance.suite.yml
+++ b/tests/Acceptance.suite.yml
@@ -8,7 +8,7 @@ actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: https://www.google.com
+            url: https://pet-shop.buckhill.com.hr
 # add Codeception\Step\Retry trait to AcceptanceTester to enable retries
 step_decorators:
     - Codeception\Step\ConditionalAssertion
