--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
         "codeception/codeception": "^5.1",
-        "codeception/module-webdriver": "^4.0"
+        "codeception/module-webdriver": "^4.0",
+        "codeception/module-asserts": "^3.0"
     }
 }
