OS compatibility first step

--- a/tests/Acceptance.suite.yml
+++ b/tests/Acceptance.suite.yml
@@ -25,6 +25,7 @@ modules:
 #            capabilities:
 #                google:chromeOptions:
 #                    args: [ "--headless" ]
+            window_size: "maximize"
 
     disabled:
         - PhpBrowser:
